# diskdisk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GITHUB-CHECKLIST.md  LICENSE-MIT  QUICKSTART.md  README.md  README.zh-CN.md  USAGE.md  build.bat  build.ps1
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cache_types.rs  cleaner.rs  lib.rs  scanner.rs
crates/core/src/utils/: expand_env.rs  mod.rs
desktop-gui/: .gitignore  Cargo.toml  README.md  build-release.ps1  dev.bat  tauri.conf.json
desktop-gui/icons/: README.md  generate-icons.html
desktop-gui/src/: lib.rs  main.rs
desktop-gui/ui/: index.html
docs/: PROJECT-COMPLETION-SUMMARY.md  cache-expansion-v0.2.0.md  domestic-apps-scan-report.md  gui-development-summary.md  system-scan-report.md
