[workspace]
members = ["crates/core", "crates/cli", "desktop-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/diskdisk"

[workspace.dependencies]
# 清理器核心依赖
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.5"
