[package]
name = "diskdisk-gui"
version = "0.1.0"
edition = "2021"
authors = ["DiskDisk Team"]
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
diskdisk-core = { path = "../crates/core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
