[package]
name = "diskdisk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "diskdisk"
path = "src/main.rs"

[dependencies]
diskdisk-core = { path = "../core" }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tabled = "0.16"
anyhow = "1.0"
