[package]
name = "diskdisk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

# 暂时注释掉 Windows 专用依赖以简化构建
# [target.'cfg(windows)'.dependencies]
# windows = { version = "0.58", features = [
#     "Win32_Foundation",
#     "Win32_System_Threading",
#     "Win32_System_Diagnostics_Debug",
#     "Win32_Storage_FileSystem",
# ] }

[dev-dependencies]
tempfile = "3.10"

